# statim

./: .deepsource.toml  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
statim/: __main__.py  image.py
statim/core/plan/: __init__.py  _base.py  _wrapper.py  win.py  win10.py
statim/disk/: __init__.py  _base.py  darwin.py  disk.py  linux.py  win32.py
statim/disk/table/: __init__.py  _base.py  gpt.py  mbr.py
statim/plan/: __init__.py  _base.py  win.py  win10.py
tests/: test_image.py  test_main.py
tests/plan/: test__base.py  test__wrapper.py  test_win.py  test_win10.py
