[tool.poetry]
name = 'statim'
version = '0.1.0'
description = ''
license = 'LGPL-2.1-only'
authors = ['Tom Hunze <github@thunze.de>']
readme = 'README.md'

[tool.poetry.dependencies]
python = '^3.10'
pydantic = '^1.9.0'

[tool.poetry.dev-dependencies]
pytest = '^7.0.1'
pytest-cov = '^3.0.0'
coveralls = '^3.3.1'
pre-commit = '^2.17.0'
flake8 = '^4.0.1'
black = '^22.1.0'
mypy = '^0.941'
isort = '^5.10.1'

[tool.coverage.report]
exclude_lines = [
    'if __name__ == .__main__.:'
]

[tool.black]
target-version = ['py310']
skip-string-normalization = true  # maybe disable this later on
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
| \.git
| \.mypy_cache
| \.pytest_cache
| \.tox
| \.venv
| build
| dist
)/
'''

[tool.isort]
profile = 'black'

[tool.mypy]
plugins = ['pydantic.mypy']
disallow_any_generics = true
disallow_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = 'tests.*'
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
